crates/daemon/tests/snapshots/cli_help__cli_help_records_ask.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 14
expression: stdout
---
Ask for a field: "lisbon booking ref", "dell receipt 2025". A query that only names something ("anthropic") lists every match. Falls back to `mxr ask` over all mail only when no record matches

Usage: mxr records ask [OPTIONS] <QUERY>

Arguments:
  <QUERY>

Options:
      --no-fallback        Don't fall back to `mxr ask` when no record matches
      --all                List every match, even when one answers the query
      --limit <LIMIT>      Records in a list's page [default: 200]
      --offset <OFFSET>    Where a list's page starts [default: 0]
      --account <ACCOUNT>  Limit to one account; the default covers every account
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
