crates/daemon/tests/snapshots/cli_help__cli_help_records_export.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Export records as CSV: --dry-run shows the row count, totals, unchecked rows and missing PDFs first

Usage: mxr records export [OPTIONS]

Options:
      --csv                CSV is the export format; the flag is accepted for scripts
      --kind <KIND>        Only these kinds: receipt, order, booking, invoice, statement, ticket, contract, warranty, account. Repeat or comma-separate
      --issuer <ISSUER>    Only records from this issuer (the issuer page)
      --year <YEAR>        Only this year, by the transaction's date
      --min <MIN>          At least this amount, like 100 or 99.50
      --max <MAX>          At most this amount
      --has-pdf            Only records with a PDF
      --no-pdf             Only records without a PDF
      --account <ACCOUNT>  Limit to one account; the default covers every account
      --unchecked          Only records with an amount or date nobody has confirmed
      --checked            Only records whose amounts and dates are all confirmed
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
      --group <GROUP>      Only one trip or series, by its id
      --out <FILE>         Write the CSV here instead of standard output
      --pdfs <DIR>         Copy each record's PDF into this folder
      --dry-run
  -h, --help               Print help
