crates/daemon/tests/snapshots/cli_help__cli_help_records_list.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
The ledger (the default): records by month, newest first

Usage: mxr records list [OPTIONS]

Options:
      --kind <KIND>        Only these kinds: receipt, order, booking, invoice, statement, ticket, contract, warranty, account. Repeat or comma-separate
      --issuer <ISSUER>    Only records from this issuer (the issuer page)
      --year <YEAR>        Only this year, by the transaction's date
      --min <MIN>          At least this amount, like 100 or 99.50
      --max <MAX>          At most this amount
      --has-pdf            Only records with a PDF
      --no-pdf             Only records without a PDF
      --unchecked          Only records with an amount or date nobody has confirmed
      --account <ACCOUNT>  Limit to one account; the default covers every account
      --checked            Only records whose amounts and dates are all confirmed
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
      --group <GROUP>      Only one trip or series, by its id
      --limit <LIMIT>      [default: 200]
      --offset <OFFSET>    [default: 0]
  -h, --help               Print help
